; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_int64.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_int64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_int64(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @git_parse_int64(i8* %6, i32* %5)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @die_bad_number(i8* %10, i8* %11)
  br label %13

13:                                               ; preds = %9, %2
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @git_parse_int64(i8*, i32*) #1

declare dso_local i32 @die_bad_number(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
